[project]
name = "gh-agent"
version = "0.1.0"
description = "Personalized GitHub Repository Agent (Planning + Tool Use + Reflection + Multi-agent)"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
  "requests>=2.32.0",
]

[project.scripts]
gh_agent = "gh_agent.cli:app"
